--- a/lib/crg.scoreboard.properties
+++ b/lib/crg.scoreboard.properties
@@ -65,7 +65,8 @@ com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.html.d
 
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.1 = com.carolinarollergirls.scoreboard.jetty.XmlScoreBoardServlet
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.2 = com.carolinarollergirls.scoreboard.jetty.ScoreBoardImageServlet
-#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.3 = ...
+com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.3 = com.carolinarollergirls.scoreboard.jetty.SaveXmlScoreBoard
+#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.4 = ...
 
 ###############################################################################
 # com.carolinarollergirls.scoreboard.file.AbstractScoreBoardFileIO properties #
