--- a/build.xml
+++ b/build.xml
@@ -19,6 +19,9 @@
 	<property name="manifest.file" value="crg-scoreboard.mf"/>
 	<available property="manifest.exists" file="${jar.dir}/${manifest.file}" />
 
+	<property name="launch4j.dir" value="launch4j"/>
+	<property name="launch4j.outfile" value="scoreboard.exe"/>
+
 	<property name="clean.verbose" value="false"/>
 	<property name="clean.quiet" value="false"/>
 
@@ -31,6 +34,7 @@
 		<echo message="  all              clean compile jdoc"/>
 		<echo message="  clean            Clean everything"/>
 		<echo message="  compile          Compile all classes and create jarfile (default)"/>
+		<echo message="  launcher         Create Windows scoreboard.exe"/>
 		<echo message="  manifest         (Re)create the manifest file"/>
 		<echo message="  help             Show this help"/>
 		<echo message="  jdoc             Create JavaDOC"/>
@@ -61,6 +65,16 @@
 			<fileset dir="${dest.dir}" excludes="**/*.java" />
 			<zipgroupfileset dir="${jar.dir}" includes="deps/*.jar" />
 		</jarjar>
+	</target>
+
+	<!-- Create Windows scoreboard.exe -->
+	<taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpath="${launch4j.dir}/launch4j.jar:${launch4j.dir}/lib/xstream.jar" />
+	<target name="launcher" >
+		<launch4j>
+			<config outfile="${launch4j.outfile}" dontWrapJar="true" jarPath="${jar.dir}/${jar.file}" headerType="console" chdir="." >
+				<jre minVersion="1.5.0" jdkPreference="preferJre" maxHeapSize="512" />
+			</config>
+		</launch4j>
 	</target>
 
 	<!-- Create Manifest only if file doesn't exist -->
