--- a/build.xml
+++ b/build.xml
@@ -120,7 +120,7 @@
 		<zip destfile="${zip.file}" >
 			<zipfileset dir="." prefix="${zip.prefix}" filemode="755" >
 				<include name="README" />
-				<include name="scoreboard.*" />
+				<include name="scoreboard-*" />
 				<include name="start.html" />
 				<include name="html/**" />
 				<include name="lib/crg-scoreboard.jar" />
