--- a/build.xml
+++ b/build.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0"?>
 
 <project name="Carolina Rollergirls Scoreboard" default="compile">
-	<property name="version" value="0.2.0-beta2"/>
-
 	<property name="ant.build.javac.source" value="1.5"/>
 	<property name="ant.build.javac.target" value="1.5"/>
 
 	<property name="src.dir" value="src"/>
 	<property name="dest.dir" value="bin"/>
 	<property name="jdoc.dir" value="jdoc"/>
+
+	<property name="version.src.dir" value="${src.dir}/com/carolinarollergirls/scoreboard/version"/>
+	<property name="version.dest.dir" value="${dest.dir}/com/carolinarollergirls/scoreboard/version"/>
+	<property name="version.release.file" value="release.properties"/>
+	<property name="version.build.file" value="build.properties"/>
+	<property file="${version.src.dir}/release.properties" prefix="version"/>
 
 	<property name="compile.deprecation" value="true"/>
 	<property name="compile.debug" value="true"/>
@@ -47,10 +51,25 @@
 		<echo message=""/>
 	</target>
 
+	<!-- Timestamp for build version -->
+	<target name="-buildversion">
+		<tstamp>
+			<format property="version.build" pattern="yyyyMMddHHmmss" />
+		</tstamp>
+		<mkdir dir="${version.dest.dir}"/>
+		<propertyfile file="${version.dest.dir}/${version.build.file}">
+			<entry key="build" value="${version.build}"/>
+		</propertyfile>
+	</target>
+
 	<!-- Compile source files -->
-	<target name="compile" depends="-manifest" >
+	<target name="compile" depends="-buildversion,-manifest" >
 		<taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask" classpath="lib/jarjar-1.0.jar"/>
 
+		<mkdir dir="${version.dest.dir}"/>
+		<copy file="${version.src.dir}/${version.release.file}"
+			todir="${version.dest.dir}"
+			overwrite="true" />
 		<mkdir dir="${dest.dir}"/>
 		<javac srcdir="${src.dir}"
 			destdir="${dest.dir}"
