add version servlet update html index page to display version

--- a/lib/crg.scoreboard.properties
+++ b/lib/crg.scoreboard.properties
@@ -65,9 +65,10 @@ com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.html.d
 
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.1 = com.carolinarollergirls.scoreboard.jetty.XmlScoreBoardServlet
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.2 = com.carolinarollergirls.scoreboard.jetty.ScoreBoardImageServlet
-com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.3 = com.carolinarollergirls.scoreboard.jetty.SaveXmlScoreBoard
-com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.4 = com.carolinarollergirls.scoreboard.jetty.LoadXmlScoreBoard
-#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.5 = ...
+com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.3 = com.carolinarollergirls.scoreboard.jetty.ScoreBoardVersionServlet
+com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.4 = com.carolinarollergirls.scoreboard.jetty.SaveXmlScoreBoard
+com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.5 = com.carolinarollergirls.scoreboard.jetty.LoadXmlScoreBoard
+#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.6 = ...
 
 ###############################################################################
 # com.carolinarollergirls.scoreboard.file.AbstractScoreBoardFileIO properties #
