--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -46,10 +46,22 @@ com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.13 = c
 ########################################################################################
 # com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController properties #
 ########################################################################################
-com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.port = 8000
-# The server will serve *any* files under this directory; html files, images, etc.  HTML directory indexes are not automatically created.
+# Set this parameter to true to restrict the scoreboard to ONLY the localhost interface.
+# By default, this is false so the scoreboard is accessible on all interfaces,
+# meaning other computers on the network can access it.
+#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.localhost = false
+
+# Change this parameter to control which port the scoreboard listens on.
+# The default port is 8000.
+#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.port = 8000
+
+# The server will serve all files under this directory; web pages, images, etc.
+# There is no default, this must be specified.
+# Unless you know what you are doing, you should leave this as "html".
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.html.dir = html
 
+# These are the servlets that are started.
+# Unless you know what you are doing, you should not modify this.
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.1 = com.carolinarollergirls.scoreboard.jetty.XmlScoreBoardServlet
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.2 = com.carolinarollergirls.scoreboard.jetty.ScoreBoardVersionServlet
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.3 = com.carolinarollergirls.scoreboard.jetty.SaveXmlScoreBoard
