--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -40,7 +40,8 @@ com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.09 = c
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.10 = com.carolinarollergirls.scoreboard.policy.TimeoutClockIncrementsTimeoutNumberPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.11 = com.carolinarollergirls.scoreboard.policy.LineupClockControlsTimeoutClockPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.12 = com.carolinarollergirls.scoreboard.policy.TeamLeadJammerIndependentPolicy
-com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.13 = com.carolinarollergirls.scoreboard.xml.policy.PagePolicy_scoreboardhtml
+com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.13 = com.carolinarollergirls.scoreboard.policy.TeamLeadJammerUniquePolicy
+com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.14 = com.carolinarollergirls.scoreboard.xml.policy.PagePolicy_scoreboardhtml
 #com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.NN = com.carolinarollergirls.scoreboard.policy....
 
 ########################################################################################
