--- a/build.xml
+++ b/build.xml
@@ -27,6 +27,10 @@
 	<property name="launch4j.dir" value="launch4j"/>
 	<property name="launch4j.outfile" value="scoreboard.exe"/>
 
+	<property name="jdom.dir" value="jdom"/>
+	<property name="jdom-contrib.dir" value="jdom-contrib"/>
+	<property name="jdom.version" value="1.1.2-snap"/>
+
 	<property name="release.dir" value="release" />
 
 	<property name="clean.verbose" value="false"/>
@@ -42,6 +46,7 @@
 		<echo message="  clean            Clean everything"/>
 		<echo message="  compile          Compile all classes and create jarfile (default)"/>
 		<echo message="  launcher         Create Windows scoreboard.exe"/>
+		<echo message="  jdom             Create jdom jarfiles"/>
 		<echo message="  manifest         (Re)create the manifest file"/>
 		<echo message="  help             Show this help"/>
 		<echo message="  jdoc             Create JavaDOC"/>
@@ -136,6 +141,24 @@
 			</config>
 		</launch4j>
 	</target>
+
+  <!-- Create JDOM jar files using our updated/fixed source -->
+  <target name="jdom" >
+    <ant dir="${jdom.dir}" inheritAll="false" />
+    <ant dir="${jdom-contrib.dir}" inheritAll="false" >
+      <property name="jdom.dir" value="../${jdom.dir}" />
+    </ant>
+    <copy overwrite="true"
+      file="${jdom.dir}/build/jdom-${jdom.version}.jar"
+      tofile="${jar.dir}/deps/jdom.jar"
+    />
+    <copy overwrite="true"
+      file="${jdom-contrib.dir}/build/jdom-contrib-${jdom.version}.jar"
+      tofile="${jar.dir}/deps/jdom-contrib.jar"
+    />
+    <ant dir="${jdom.dir}" inheritAll="false" target="clean" />
+    <ant dir="${jdom-contrib.dir}" inheritAll="false" target="clean" />
+  </target>
 
 	<!-- Create zip file -->
 	<target name="zip" depends="clean,-version,compile" >
