Update MediaServlet to add upload support Add upload dialog to media_management page

--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -68,7 +68,7 @@ com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servle
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.2 = com.carolinarollergirls.scoreboard.jetty.ScoreBoardVersionServlet
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.3 = com.carolinarollergirls.scoreboard.jetty.SaveXmlScoreBoard
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.4 = com.carolinarollergirls.scoreboard.jetty.LoadXmlScoreBoard
-com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.5 = com.carolinarollergirls.scoreboard.jetty.ListMediaServlet
+com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.5 = com.carolinarollergirls.scoreboard.jetty.MediaServlet
 #com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.6 = ...
 
 ###############################################################################
