update build.xml to ignore any image files in teamlogo or sponsor_banner dirs while creating release

--- a/build.xml
+++ b/build.xml
@@ -188,6 +188,8 @@
         <include name="scoreboard-Linux.sh" />
         <include name="start.html" />
         <include name="html/**" />
+        <exclude name="html/images/teamlogo/*" />
+        <exclude name="html/images/sponsor_banner/*" />
         <include name="lib/crg-scoreboard.jar" />
         <include name="config/crg.scoreboard.properties" />
         <include name="config/default/**" />
