Update stream-to-file and add xml document manager to control functionality

--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -45,6 +45,15 @@ com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.14 = c
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.15 = com.carolinarollergirls.scoreboard.xml.policy.PagePolicy_scoreboardhtml
 #com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.NN = com.carolinarollergirls.scoreboard.policy....
 
+##########################################################################
+# com.carolinarollergirls.scoreboard.xml.SaveScoreBoardStream properties #
+##########################################################################
+
+# The server will stream files into this directory (when enabled)
+# There is no default, this must be specified.
+# Usually, you should leave this as "html/stream".
+com.carolinarollergirls.scoreboard.xml.SaveScoreBoardStream.dir = html/stream
+
 ########################################################################################
 # com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController properties #
 ########################################################################################
@@ -70,12 +79,3 @@ com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servle
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.4 = com.carolinarollergirls.scoreboard.jetty.LoadXmlScoreBoard
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.5 = com.carolinarollergirls.scoreboard.jetty.MediaServlet
 #com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.6 = ...
-
-###############################################################################
-# com.carolinarollergirls.scoreboard.file.AbstractScoreBoardFileIO properties #
-###############################################################################
-# This is the directory where the save/restore files are.  If it is also
-# in the Jetty html dir (see section above) then you can download them via http
-com.carolinarollergirls.scoreboard.file.AbstractScoreBoardFileIO.directory = html/save
-
-
