Create common AbstractScoreBoardStream class Add LoadScoreBoardStream add ScoreBoardInputStream

--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -45,14 +45,14 @@ com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.14 = c
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.15 = com.carolinarollergirls.scoreboard.xml.policy.PagePolicy_scoreboardhtml
 #com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.NN = com.carolinarollergirls.scoreboard.policy....
 
-##########################################################################
-# com.carolinarollergirls.scoreboard.xml.SaveScoreBoardStream properties #
-##########################################################################
+##############################################################################
+# com.carolinarollergirls.scoreboard.xml.AbstractScoreBoardStream properties #
+##############################################################################
 
 # The server will stream files into this directory (when enabled)
 # There is no default, this must be specified.
 # Usually, you should leave this as "html/stream".
-com.carolinarollergirls.scoreboard.xml.SaveScoreBoardStream.dir = html/stream
+com.carolinarollergirls.scoreboard.xml.AbstractScoreBoardStream.dir = html/stream
 
 ########################################################################################
 # com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController properties #
