--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -78,4 +78,5 @@ com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servle
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.3 = com.carolinarollergirls.scoreboard.jetty.SaveXmlScoreBoard
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.4 = com.carolinarollergirls.scoreboard.jetty.LoadXmlScoreBoard
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.5 = com.carolinarollergirls.scoreboard.jetty.MediaServlet
-#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.6 = ...
+com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.6 = com.carolinarollergirls.scoreboard.jetty.StreamServlet
+#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.7 = ...
