--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -18,7 +18,8 @@ com.carolinarollergirls.scoreboard.ScoreBoardManager.controller.1 = com.carolina
 #   These are the viewers.
 #   Since a controller can be a viewer also, there does not have to be one defined.
 #   There can be an unlimited number defined.        
-#com.carolinarollergirls.scoreboard.ScoreBoardManager.viewer.1 = ...
+com.carolinarollergirls.scoreboard.ScoreBoardManager.viewer.1 = com.carolinarollergirls.scoreboard.viewer.TwitterViewer
+#com.carolinarollergirls.scoreboard.ScoreBoardManager.viewer.2 = ...
 
 #################################################################################
 # com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel properties #
