--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ bin
 release
 lib/crg-scoreboard.jar
 config/autosave
+html/stream
 html/images/teamlogo
 html/images/sponsor_banner
-html/stream
+html/images/fullscreen
+!html/images/fullscreen/American Flag.jpg
+!html/images/fullscreen/overlay.png
+html/videos/fullscreen
+!html/videos/fullscreen/American Flag.webm
