Update build.xml to exclude html/stream/* from release zip

--- a/build.xml
+++ b/build.xml
@@ -189,6 +189,7 @@
         <include name="scoreboard-Linux.sh" />
         <include name="start.html" />
         <include name="html/**" />
+        <exclude name="html/stream/*" />
         <exclude name="html/images/teamlogo/*" />
         <exclude name="html/images/sponsor_banner/*" />
         <include name="lib/crg-scoreboard.jar" />
