Add OvertimeLineupTimePolicy, which will adjust the lineup clock time if needed for the 1-minute overtime lineup

--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -44,6 +44,7 @@ com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.12 = c
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.13 = com.carolinarollergirls.scoreboard.policy.TeamLeadJammerIndependentPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.14 = com.carolinarollergirls.scoreboard.policy.TeamLeadJammerUniquePolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.15 = com.carolinarollergirls.scoreboard.xml.policy.PagePolicy_scoreboardhtml
+com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.16 = com.carolinarollergirls.scoreboard.policy.OvertimeLineupTimePolicy
 #com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.NN = com.carolinarollergirls.scoreboard.policy....
 
 ##############################################################################
