--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -45,6 +45,7 @@ com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.13 = c
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.14 = com.carolinarollergirls.scoreboard.policy.TeamLeadJammerUniquePolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.15 = com.carolinarollergirls.scoreboard.xml.policy.PagePolicy_scoreboardhtml
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.16 = com.carolinarollergirls.scoreboard.policy.OvertimeLineupTimePolicy
+com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.17 = com.carolinarollergirls.scoreboard.policy.PeriodClockResetsOfficialScorePolicy
 #com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.NN = com.carolinarollergirls.scoreboard.policy....
 
 ##############################################################################
