Add format specifier descriptions and fill out twitter page format specifier help using format specifier description list instead of hardcoded list in html

--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -92,4 +92,5 @@ com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servle
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.4 = com.carolinarollergirls.scoreboard.jetty.LoadXmlScoreBoard
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.5 = com.carolinarollergirls.scoreboard.jetty.MediaServlet
 com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.6 = com.carolinarollergirls.scoreboard.jetty.StreamServlet
-#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.7 = ...
+com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.7 = com.carolinarollergirls.scoreboard.jetty.FormatSpecifiersServlet
+#com.carolinarollergirls.scoreboard.jetty.JettyServletScoreBoardController.servlet.8 = ...
