Include blank teamlogo and sponsor_banner directories in zip releases

--- a/build.xml
+++ b/build.xml
@@ -176,6 +176,8 @@
   <!-- Create zip file -->
   <target name="zip" depends="clean,-version,compile" >
     <mkdir dir="${release.dir}" />
+    <mkdir dir="html/images/teamlogo" />
+    <mkdir dir="html/images/sponsor_banner" />
     <property name="zip.prefix" value="crg-scoreboard_${version}"/>
     <zip destfile="${release.dir}/${zip.prefix}.zip" >
       <zipfileset dir="." prefix="${zip.prefix}" filemode="755" >
@@ -192,6 +194,8 @@
         <exclude name="html/stream/*" />
         <exclude name="html/images/teamlogo/*" />
         <exclude name="html/images/sponsor_banner/*" />
+        <include name="html/images/teamlogo" />
+        <include name="html/images/sponsor_banner" />
         <include name="lib/crg-scoreboard.jar" />
         <include name="config/crg.scoreboard.properties" />
         <include name="config/default/**" />
