Moved JamClockControlsTeamPositionsPolicy code in to main code base.

--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -35,7 +35,7 @@ com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.03 = c
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.04 = com.carolinarollergirls.scoreboard.policy.IntermissionClockStopPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.05 = com.carolinarollergirls.scoreboard.policy.PeriodClockControlsLineupClockPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.06 = com.carolinarollergirls.scoreboard.policy.JamClockControlsLineupClockPolicy
-com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.07 = com.carolinarollergirls.scoreboard.policy.JamClockControlsTeamPositionsPolicy
+#com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.07 = com.carolinarollergirls.scoreboard.policy.JamClockControlsTeamPositionsPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.08 = com.carolinarollergirls.scoreboard.policy.JamClockEndsOvertimePolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.09 = com.carolinarollergirls.scoreboard.policy.TimeoutClockControlsLineupClockPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.10 = com.carolinarollergirls.scoreboard.policy.TimeoutClockIncrementsTimeoutNumberPolicy
