Change LeadJammer from boolean to Lead/NoLead/LostLead

--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -30,7 +30,7 @@ com.carolinarollergirls.scoreboard.ScoreBoardManager.viewer.1 = com.carolinaroll
 #   Note these classes must implement the PolicyModel interface, not just the Policy interface.
 #   See each individual policy class for a description of what specifically it does.
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.01 = com.carolinarollergirls.scoreboard.policy.ClockSyncPolicy
-com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.02 = com.carolinarollergirls.scoreboard.policy.PenaltyBoxControlsLeadJammerPolicy
+#com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.02 = com.carolinarollergirls.scoreboard.policy.PenaltyBoxControlsLeadJammerPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.03 = com.carolinarollergirls.scoreboard.policy.IntermissionClockStartPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.04 = com.carolinarollergirls.scoreboard.policy.IntermissionClockStopPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.05 = com.carolinarollergirls.scoreboard.policy.PeriodClockControlsLineupClockPolicy
@@ -44,8 +44,8 @@ com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.12 = c
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.13 = com.carolinarollergirls.scoreboard.policy.LineupClockStartsTimeoutPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.14 = com.carolinarollergirls.scoreboard.policy.LineupClockStartsJamPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.15 = com.carolinarollergirls.scoreboard.policy.LineupClockResetsJamTimePolicy
-com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.16 = com.carolinarollergirls.scoreboard.policy.TeamLeadJammerIndependentPolicy
-com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.17 = com.carolinarollergirls.scoreboard.policy.TeamLeadJammerUniquePolicy
+#com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.16 = com.carolinarollergirls.scoreboard.policy.TeamLeadJammerIndependentPolicy
+#com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.17 = com.carolinarollergirls.scoreboard.policy.TeamLeadJammerUniquePolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.18 = com.carolinarollergirls.scoreboard.xml.policy.PagePolicy_scoreboardhtml
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.19 = com.carolinarollergirls.scoreboard.policy.OvertimeLineupTimePolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.20 = com.carolinarollergirls.scoreboard.policy.PeriodClockResetsOfficialScorePolicy
