--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ html/images/fullscreen
 !html/images/fullscreen/overlay.png
 html/videos/fullscreen
 !html/videos/fullscreen/American Flag.webm
+GameData
