--- a/build.xml
+++ b/build.xml
@@ -27,10 +27,6 @@
 	<property name="launch4j.dir" value="launch4j"/>
 	<property name="launch4j.outfile" value="scoreboard.exe"/>
 
-	<property name="jdom.dir" value="jdom"/>
-	<property name="jdom-contrib.dir" value="jdom-contrib"/>
-	<property name="jdom.version" value="1.1.2-snap"/>
-
 	<property name="media.dir" value="media-src" />
 
 	<property name="release.dir" value="release" />
@@ -52,7 +48,6 @@
 		<echo message="	clean						Clean everything"/>
 		<echo message="	compile					Compile all classes and create jarfile (default)"/>
 		<echo message="	launcher				 Create Windows scoreboard.exe"/>
-		<echo message="	jdom						 Create jdom jarfiles"/>
 		<echo message="	manifest				 (Re)create the manifest file"/>
 		<echo message="	media						Create media zip files"/>
 		<echo message="	help						 Show this help"/>
@@ -87,14 +82,14 @@
 		<mkdir dir="${dest.dir}"/>
 		<mkdir dir="html/images/teamlogo" />
 		<mkdir dir="html/images/sponsor_banner" />
-		<javac srcdir="${src.dir}"
+		<javac srcdir="."
 			destdir="${dest.dir}"
 			deprecation="${compile.deprecation}"
 			debug="${compile.debug}"
 			verbose="${compile.verbose}"
 			nowarn="${compile.nowarn}"
 			includeAntRuntime="false"
-			includes="com/carolinarollergirls/scoreboard/**" >
+			includes="${src.dir}/com/carolinarollergirls/scoreboard/** json/*" >
 
 			<compilerarg value="-Xlint:unchecked"/>
 			<classpath>
@@ -162,24 +157,6 @@
 			<fileset dir="${media.dir}/release" includes="*-latest-version" />
 		</copy>
 		<ant dir="${media.dir}" inheritAll="false" target="clean" />
-	</target>
-
-	<!-- Create JDOM jar files using our updated/fixed source -->
-	<target name="jdom" >
-		<ant dir="${jdom.dir}" inheritAll="false" />
-		<ant dir="${jdom-contrib.dir}" inheritAll="false" >
-			<property name="jdom.dir" value="../${jdom.dir}" />
-		</ant>
-		<copy overwrite="true"
-			file="${jdom.dir}/build/jdom-${jdom.version}.jar"
-			tofile="${jar.dir}/deps/jdom.jar"
-		/>
-		<copy overwrite="true"
-			file="${jdom-contrib.dir}/build/jdom-contrib-${jdom.version}.jar"
-			tofile="${jar.dir}/deps/jdom-contrib.jar"
-		/>
-		<ant dir="${jdom.dir}" inheritAll="false" target="clean" />
-		<ant dir="${jdom-contrib.dir}" inheritAll="false" target="clean" />
 	</target>
 
 	<!-- Create android apk -->
