--- a/config/crg.scoreboard.properties
+++ b/config/crg.scoreboard.properties
@@ -34,7 +34,7 @@ com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.01 = c
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.03 = com.carolinarollergirls.scoreboard.policy.IntermissionClockStartPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.04 = com.carolinarollergirls.scoreboard.policy.IntermissionClockStopPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.05 = com.carolinarollergirls.scoreboard.policy.PeriodClockControlsLineupClockPolicy
-com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.06 = com.carolinarollergirls.scoreboard.policy.JamClockControlsLineupClockPolicy
+#com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.06 = com.carolinarollergirls.scoreboard.policy.JamClockControlsLineupClockPolicy
 #com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.07 = com.carolinarollergirls.scoreboard.policy.JamClockControlsTeamPositionsPolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.08 = com.carolinarollergirls.scoreboard.policy.JamClockEndsOvertimePolicy
 com.carolinarollergirls.scoreboard.defaults.DefaultScoreBoardModel.policy.09 = com.carolinarollergirls.scoreboard.policy.TimeoutClockControlsLineupClockPolicy
