--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ html/images/fullscreen
 html/videos/fullscreen
 !html/videos/fullscreen/American Flag.webm
 GameData
+android/.gradle/
+android/assets/
+android/build/
+rules/
