--- a/android/build.gradle
+++ b/android/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 	compile 'org.eclipse.jetty:jetty-http:7.6.+'
 	compile 'org.eclipse.jetty:jetty-servlet:7.6.+'
 	compile 'org.eclipse.jetty:jetty-util:7.6.+'
+	compile 'org.eclipse.jetty:jetty-websocket:7.6.+'
 	compile 'org.twitter4j:twitter4j-core:3.0.+'
 	compile 'org.twitter4j:twitter4j-stream:3.0.+'
 	compile 'org.twitter4j:twitter4j-media-support:3.0.+'
