runtime penalty file (initial implementation)
use jackson to load a penalty json file to hydrate the penalty information into the format the JS understands. Made the definition object itself responsible for loading from json, which seems fitting based on the old-fashioned patterns in the Java in the application.

--- a/.classpath
+++ b/.classpath
@@ -37,5 +37,8 @@
 	<classpathentry kind="lib" path="test-libs/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="test-libs/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="test-libs/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="lib/deps/jackson-annotations-2.9.5.jar"/>
+	<classpathentry kind="lib" path="lib/deps/jackson-core-2.9.5.jar"/>
+	<classpathentry kind="lib" path="lib/deps/jackson-databind-2.9.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
