--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -33,5 +34,7 @@
 	<classpathentry kind="lib" path="lib/deps/twitter4j-media-support-3.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/deps/twitter4j-stream-3.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/deps/json-20140107.jar"/>
+	<classpathentry kind="lib" path="test-libs/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="test-libs/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
