--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,8 @@
 
 	<property name="src.dir" value="src"/>
 	<property name="dest.dir" value="bin"/>
+	<property name="test.src.dir" value="tests" />
+	<property name="test.build.dir" value="test-bin" />
 	<property name="jdoc.dir" value="jdoc"/>
 <property name="version.src.dir" value="${src.dir}/com/carolinarollergirls/scoreboard/version"/>
 	<property name="version.dest.dir" value="${dest.dir}/com/carolinarollergirls/scoreboard/version"/>
@@ -37,6 +39,13 @@
 	<property name="one-jar.dist.dir" value="one-jar"/>
 	<import file="${one-jar.dist.dir}/one-jar-ant-task.xml" optional="true" />
 
+	
+	 <path id="classpath.test">
+	    <pathelement location="test-libs/junit-4.11.jar"/>
+	    <pathelement location="test-libs/hamcrest-core-1.3.jar"/>
+	    <pathelement location="${dest.dir}"/>
+	  </path>
+	
 	<!-- Show help (the different options for this build.xml) -->
 	<target name="help">
 		<echo message="Buildfile for Carolina Rollergirls Scoreboard"/>
@@ -107,6 +116,27 @@
 			</lib>
 		</one-jar>
 	</target>
+	
+	 <target name="test-compile" depends="compile">
+	    <mkdir dir="${test.build.dir}"/>
+	    <javac srcdir="${test.src.dir}" destdir="${test.build.dir}" includeantruntime="false">
+	        <classpath refid="classpath.test"/>
+	    </javac>
+	  </target>
+	
+	
+	<target name="test" depends="test-compile">
+	    <junit printsummary="on" haltonfailure="yes" fork="true">
+	        <classpath>
+	          <path refid="classpath.test"/>
+	          <pathelement location="${test.build.dir}"/>
+	        </classpath>
+	        <formatter type="brief" usefile="false" />
+	        <batchtest>
+	            <fileset dir="${test.src.dir}" includes="**/*Test.java" />
+	        </batchtest>
+	    </junit>
+	  </target>
 
 	<!-- Create Manifest only if file doesn't exist -->
 	<target name="-manifest" unless="manifest.exists" >
