--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
 	<property name="test.src.dir" value="tests" />
 	<property name="test.build.dir" value="test-bin" />
 	<property name="jdoc.dir" value="jdoc"/>
-<property name="version.src.dir" value="${src.dir}/com/carolinarollergirls/scoreboard/version"/>
+	<property name="version.src.dir" value="${src.dir}/com/carolinarollergirls/scoreboard/version"/>
 	<property name="version.dest.dir" value="${dest.dir}/com/carolinarollergirls/scoreboard/version"/>
 	<property name="version.release.file" value="release.properties"/>
 	<property name="version.build.file" value="build.properties"/>
@@ -39,13 +39,12 @@
 	<property name="one-jar.dist.dir" value="one-jar"/>
 	<import file="${one-jar.dist.dir}/one-jar-ant-task.xml" optional="true" />
 
-	
-	 <path id="classpath.test">
-	    <pathelement location="test-libs/junit-4.11.jar"/>
-	    <pathelement location="test-libs/hamcrest-core-1.3.jar"/>
-	    <pathelement location="${dest.dir}"/>
-	  </path>
-	
+	<path id="classpath.test">
+		<pathelement location="test-libs/junit-4.11.jar"/>
+		<pathelement location="test-libs/hamcrest-core-1.3.jar"/>
+		<pathelement location="${dest.dir}"/>
+	</path>
+
 	<!-- Show help (the different options for this build.xml) -->
 	<target name="help">
 		<echo message="Buildfile for Carolina Rollergirls Scoreboard"/>
@@ -216,7 +215,7 @@
 	</target>
 
 	<!-- Create zip file -->
-	<target name="zip" depends="clean,-version,compile" >
+	<target name="zip" depends="clean,-version,compile,test" >
 		<mkdir dir="${release.dir}" />
 		<property name="zip.prefix" value="crg-scoreboard_${version}"/>
 		<zip destfile="${release.dir}/${zip.prefix}.zip" >
