return to approach 1: deliver penalty codes via WS, but send in JSON directly instead of text
Assume all penalties are expellable, simplifies the font-end code without introducing additional delivery mechanisms

--- a/build.xml
+++ b/build.xml
@@ -238,7 +238,7 @@
 				<include name="html/images/sponsor_banner" />
 				<include name="lib/crg-scoreboard.jar" />
 				<include name="config/crg.scoreboard.properties" />
-				<include name="config/penalties.json" />
+				<include name="config/penalties/**" />
 				<include name="config/default/**" />
 			</zipfileset>
 		</zip>
