Suppress warnings for serial version UID in Eclipse and ant
supress warning for comparing identical expressins in example test

--- a/build.xml
+++ b/build.xml
@@ -100,6 +100,7 @@
 			includes="${src.dir}/com/carolinarollergirls/scoreboard/** json/*" >
 
 			<compilerarg value="-Xlint:unchecked"/>
+			<compilerarg value="-Xlint:-serial"/>
 			<classpath>
 				<fileset dir="${jar.dir}" includes="deps/*.jar" />
 			</classpath>
