Enable all lint warnings
Exception: serial version UIDs remain excluded

Currently this gives no warnings on a clean build

--- a/build.xml
+++ b/build.xml
@@ -99,7 +99,7 @@
 			includeAntRuntime="false"
 			includes="${src.dir}/com/carolinarollergirls/scoreboard/** json/*" >
 
-			<compilerarg value="-Xlint:unchecked"/>
+			<compilerarg value="-Xlint:all"/>
 			<compilerarg value="-Xlint:-serial"/>
 			<classpath>
 				<fileset dir="${jar.dir}" includes="deps/*.jar" />
